Create base layout of home domain
Create a header and two sections (premiere of the month and best sellers). In the future data will be provided

--- a/libs/client-web-app/shell/ui/src/lib/nav/nav.component.html
+++ b/libs/client-web-app/shell/ui/src/lib/nav/nav.component.html
@@ -24,7 +24,7 @@
             [icon]="
               categoriesMenu.visible ? 'pi pi-angle-up' : 'pi pi-angle-down'
             "
-            label="Kategorie"
+            label="Categories"
           ></p-button>
           <p-menu
             #categoriesMenu
