--- a/apps/client-web-app/src/styles.scss
+++ b/apps/client-web-app/src/styles.scss
@@ -1,8 +1,9 @@
+@import './assets//primeng-extends';
+@import 'primeicons/primeicons.css';
+@import './assets/_primeflex-extra.scss';
 @import 'primeng/resources/themes/md-dark-indigo/theme.css';
 @import 'primeng/resources/primeng.css';
 @import 'primeflex/primeflex.css';
-@import 'primeicons/primeicons.css';
-@import './assets/primeflex-extra.scss';
 
 :root {
   --border-radius: 0.5rem;
@@ -29,103 +30,8 @@ p {
   padding: 0;
 }
 
-.p-password {
-  width: 100%;
-}
-
-button {
-  border-radius: var(--border-radius);
-}
-
-button.p-button-rounded {
-  border-radius: 50%;
-}
-
-a.p-button {
-  border-radius: var(--border-radius);
-}
-
-p-button.w-full .p-button {
-  width: 100% !important;
-}
-
-.p-inputtext:enabled:focus {
-  box-shadow: none !important;
-}
-
-.p-menu-two-columns .p-menu {
-  width: max-content !important;
-  border-radius: var(--border-radius);
-  padding: 0.5rem;
-  margin-top: 0.5rem;
-
-  & ul {
-    display: grid !important;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 0.5rem;
-  }
-}
-
-.p-menu .p-menuitem > .p-menuitem-content {
-  border-radius: var(--border-radius);
-}
-
-.grid-auto-fit {
-  display: grid;
-  gap: 2rem;
-  width: 100%;
-  grid-template-columns: repeat(auto-fit, minmax(20rem, var(--max-card-width)));
-  place-content: center;
-}
-
-@media (min-width: 668px) {
-  .grid-auto-fit {
-    place-content: start;
-  }
-}
-
-.grid-all-columns {
-  grid-column: 1 / -1;
-}
-
-.min-content-height {
-  min-height: calc(100svh - var(--header-height) - 10rem);
-}
-
-.p-menu-sidebar .p-menu {
-  border: none;
-  background-color: transparent;
-  width: 100%;
-}
-
-.p-accordion {
-  background: transparent;
-}
-
-.p-accordion-tab {
-  border-radius: var(--border-radius);
-  background: transparent;
-}
-
-.p-menu
-  .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
-  > .p-menuitem-content {
-  background: transparent;
-  border-radius: var(--border-radius);
-}
-
-.p-menu .p-menuitem .p-menuitem-link:focus {
-  border-radius: var(--border-radius);
-}
-
 .height-content {
   height: calc(100svh - var(--header-height) - 3rem);
-}
-
-.p-breadcrumb {
-  background: transparent;
-  border: none;
-  padding: 0;
 }
 
 .text-accent-color {
