Update looks of the book details page
Create a new look of book details page. Now cover image is on half of the screen and second half has a book details informations

--- a/apps/client-web-app/src/assets/_primeflex-extra.scss
+++ b/apps/client-web-app/src/assets/_primeflex-extra.scss
@@ -39,6 +39,10 @@
   max-width: 103rem;
 }
 
+.max-w-60rem {
+  max-width: 60rem;
+}
+
 @media (min-width: 668px) {
   .grid-auto-fit {
     place-content: start;
