Create book-details ui lib and other minor changes
Fix clearing filters and search when search icon was used to go to browse domain

--- a/apps/client-web-app/src/assets/_primeflex-extra.scss
+++ b/apps/client-web-app/src/assets/_primeflex-extra.scss
@@ -2,6 +2,10 @@
   transform: translateY(50%);
 }
 
+.-translate-y-50 {
+  transform: translateY(-50%);
+}
+
 .nav-height {
   height: var(--header-height);
 }
