--- a/libs/client-web-app/shell/ui/nav/src/lib/nav/nav.component.html
+++ b/libs/client-web-app/shell/ui/nav/src/lib/nav/nav.component.html
@@ -52,7 +52,9 @@
     <div class="flex align-items-center gap-2">
       <a
         class="hidden p-button p-button-text flex-column justify-content-center no-underline border-radius md:flex"
-        [routerLink]="browseRoutePaths.default"
+        [routerLink]="search.routerLink"
+        [queryParams]="search.queryParams"
+        [state]="search.state"
         pTooltip="Search the books"
         tooltipPosition="bottom"
       >
@@ -71,20 +73,6 @@
           <i class="pi pi-user" style="font-size: 1.5rem"></i>
         </span>
       </p-button>
-      <!-- <a -->
-      <!--   class="hidden p-button p-button-text flex-column justify-content-center no-underline border-radius md:flex" -->
-      <!--   routerLink="" -->
-      <!--   pTooltip="View your cart" -->
-      <!--   tooltipPosition="bottom" -->
-      <!-- > -->
-      <!--   <i class="pi pi-shopping-cart" style="font-size: 1.5rem"></i> -->
-      <!-- </a> -->
-
-      <!-- <p-button -->
-      <!--   (click)="openCart()" -->
-      <!--   icon="pi pi-shopping-cart" -->
-      <!--   class="hidden xl:flex" -->
-      <!-- ></p-button> -->
       <p-button
         #openCartSidebar
         type="button"
@@ -116,6 +104,7 @@
         [(visible)]="sidebarVisible"
         position="left"
         appendTo="body"
+        [blockScroll]="true"
       >
         <ng-template pTemplate="header">
           <div
