Add theme switcher

--- a/apps/client-web-app/src/styles.scss
+++ b/apps/client-web-app/src/styles.scss
@@ -1,7 +1,7 @@
-@import './assets//primeng-extends';
+@import './assets/primeng-extends';
 @import 'primeicons/primeicons.css';
 @import './assets/_primeflex-extra.scss';
-@import 'primeng/resources/themes/md-dark-indigo/theme.css';
+// @import 'primeng/resources/themes/md-dark-indigo/theme.css';
 @import 'primeng/resources/primeng.css';
 @import 'primeflex/primeflex.css';
 
