--- a/libs/client-web-app/home/feature/src/lib/home/home.component.html
+++ b/libs/client-web-app/home/feature/src/lib/home/home.component.html
@@ -5,7 +5,7 @@
     </h2>
     <a
       [routerLink]="browseRoutePaths.default"
-      class="p-button p-button-outlined no-underline link"
+      class="p-button p-button-secondary p-button-outlined no-underline link"
       pButton
     >
       Explore now
